[project]
name = "ai-yt-dlp-web"
version = "0.1.0"
description = "A web-based video download manager built with NiceGUI and yt-dlp"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "nicegui>=3.3.1",
    "yt-dlp>=2025.11.12",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
